--- a/CatMan/CatMan.html
+++ b/CatMan/CatMan.html
@@ -9,12 +9,9 @@
 
 <body>
 <img src="CatMan001.jpg" title="Cat-Man"> <br>
-Series: 21 issues 1941 - 1946<br>
-Publishers: Temerson / Helnit / Continental, Holyoke <br>
-Written and Illustrated by: Charles Quinlan, as Martin Panzer<br>
+21 issues from 1941-1946 by Temerson / Helnit / Continental, Holyoke <br>
+Written and Illustrated by: Charles Quinlan, as Martin Panzer.
 <p>
-The first five issues went by the title Crash Comics (Cat-Man debuted in Crash Comics #4) and the company decided to change the title and continue the numbering instead of starting over with #1. This was usually for subscriptions and mailing purposes. This site also has the Crash Comics issues (under Holyoke).
-</p><p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
 </div> </div>
@@ -48,6 +45,9 @@ The first five issues went by the title Crash Comics (Cat-Man debuted in Crash C
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
+
+</p><p>
+The first five issues went by the title Crash Comics (Cat-Man debuted in Crash Comics #4) and the company decided to change the title and continue the numbering instead of starting over with #1. This was usually for subscriptions and mailing purposes. This site also has the Crash Comics issues (under Holyoke).
 
 </p>
 </body>
