--- a/Catalyst/Catalyst.html
+++ b/Catalyst/Catalyst.html
@@ -7,10 +7,8 @@
 </head>
 
 <body>
-<h2>Catalyst</h2>
 <img src="Catalyst.jpg"> <br>
-Series: on-going, 7 issues<br>
-Publisher: 1994 Dark Horse<br>
+7 issues in 1994 by Dark Horse<br>
 <p>
 Written by Eddie Campbell and Pete Ford. Art by Tim Hamilton, Steve Carr and Shane Glines. Cover by Jason Pearson. Fresh from its appearance in Out of the Vortex (1993) #5, super-team Catalyst, rallying behind its omnipotent leader Grace, has declared Golden City's secession from the United States. The government isn't rolling over and playing dead, as they're unleashing a full-scale military assault against the city and its heroes. It's the Agents of Change vs. the U.S. Armed Forces in this action-packed premier issue.
 </p>
