--- a/CaveCarson/CaveCarson.html
+++ b/CaveCarson/CaveCarson.html
@@ -9,8 +9,7 @@
 
 <body>
 <img src="CaveCarson1.jpg"><br>
-Series: 12 issues 2016 - 2017, 2 colection TPB 2017, 6 issues 2018 <br>
-Publisher: DC<br>
+12 issues 2016 - 2017, 2 colection TPB 2017, 6 issues 2018 by DC
 <p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
@@ -22,7 +21,6 @@ Publisher: DC<br>
 
 <div class="mySlides" style="text-align: center;"><img src="CaveCarson1.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="CaveCarson1b.jpg"></div>
-
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -36,5 +34,6 @@ The character was relaunched and reinvented in 2016 for DC's new publishing line
 </p><p>
 Cave Carson has done it all: survived countless adventures below the Earth's surface, met the love of his life, and gotten a cybernetic eye...somehow. Now, newly widowed, Cave tries to piece his life back together when a knock on the door of his secret underground lab pulls him back into a past that he and Eileen thought they had left buried deep within the Earth. Cave must determine if his recent hallucinations are the work of his mind or his mysterious cybernetic eye. (Spoiler: It's the eye.) 
 </p>
+
 </body>
 </html>
