--- a/Centipede/Centipede.html
+++ b/Centipede/Centipede.html
@@ -7,13 +7,10 @@
 </head>
 
 <body>
-<h2>Centipede</h2>
 <img src="Centipede1A.jpg"> 
 <img src="Centipede1B.jpg"> <br>
-Writer: Max Bemis<br>
-Illustrator: Eoin Marron<br>
-Series: on-going<br>
-Publisher: 2017 Dynamite Entertainment<br>
+Writer: Max Bemis, Illustrator: Eoin Marron<br>
+2017 by Dynamite Entertainment
 <p>
 Based on the classic Atari game! When a terrifying creature from beyond the stars attacks his planet, Dale's journey begins. But he is not out to save his world. It is already too late for that. As the lone survivor, the only thing he wants is revenge! Writer Max Bemis (Worst X-Man Ever, Foolkiller) and artist Eoin Marron (Sons of Anarchy Redwood Original) bring you a tale of survival and vengeance like you've never seen before.
 </p><p>
