--- a/Champions/Champions.html
+++ b/Champions/Champions.html
@@ -2,16 +2,45 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Champions</title>
 </head>
 
 <body>
-<h2>Champions</h2>
-<img src="Champions.jpg"> <br>
-Series: on-going, 17 issues<br>
-Publisher: 1975 Marvel<br>
+<img src="Champions1.jpg"> <br>
+17 issues in 1975 by Marvel
 <p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="Champions1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Champions2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Champions3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Champions4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Champions5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Champions6.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Champions7.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Champions8.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Champions9.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Champions10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Champions11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Champions12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Champions13.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Champions14.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Champions15.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Champions16.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Champions17.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
 The World Still needs the Champions!" Part 1 of 3. Story by Tony Isabella. Art by Don Heck and Mike Esposito. Cover by Gil Kane and Dan Adkins. Courage made them heroes, fate made them Champions! Can a former super-spy, two mutants, a demi-god, and a demon carry on in the tradition of the mighty Avengers and Fantastic Four?
 </p><p>
 Black Widow, Ice Man, Angel, Hercules, and Ghost Rider must unite to defend the Olympic goddess, Venus, from the evil machinations of Pluto, Lord of the Underworld, Ares, God of War, and Hyppolyta, Queen of the Amazons.
