--- a/ChevalNoir/ChevalNoir.html
+++ b/ChevalNoir/ChevalNoir.html
@@ -7,11 +7,9 @@
 </head>
 
 <body>
-<h2>Cheval Noir</h2>
 <img src="ChevalNoir.jpg"> <br>
-Series: on-going, 50 issues<br>
+50 issues from1989-1994 by Dark Horse<br>
 Cover: Dave Stevens
-Publisher: 1989-1994 Dark Horse<br>
 <p>
 This elegant new anthology will feature the best work by the best cartoonists the world over! Phillipe Druillet's The Lone Sloane, Adele and the Beast by Jacques Tardi, Angel Fusion by Kato and Goto, and stories by a host of other renowned creators, including Schuiten and Peeters, Andreas, and Cossu.
 </p>
