--- a/Chiaroscuro/Chiaroscuro.html
+++ b/Chiaroscuro/Chiaroscuro.html
@@ -2,17 +2,40 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
-<title>Chiaroscuro</title>
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
+<title>Chiaroscuro: The Private Lives of Leonardo DaVinci</title>
 </head>
 
 <body>
-<h2>Chiaroscuro: The Private Lives of Leonardo DaVinci</h2>
 <img src="Chiaroscuro.jpg"> <br>
-Series: on-going, 10 issues<br>
-Publisher: 1995-1996 Vertigo (DC)<br>
+10 issues from 1995-1996 by Vertigo (DC)<br>
 <p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="Chiaroscuro.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Chiaroscuro2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Chiaroscuro3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Chiaroscuro4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Chiaroscuro5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Chiaroscuro6.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Chiaroscuro7.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Chiaroscuro8.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Chiaroscuro9.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Chiaroscuro10.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
 Seen through the eyes of his beguilingly amoral companion, this seductive psychological drama explores the turbulent life of Leonardo da Vinci in shockingly intimate detail. Written by David Rawson and Pat McGreal, with art by Chas Truog and Rafael Kayanan. Photo cover by Stephen John Phillips and Richard Bruning. Suggested for Mature Readers. Contains sexual themes and strong subject matter.
 </p>
+
 </body>
 </html>
