--- a/Chili/Chili.html
+++ b/Chili/Chili.html
@@ -7,11 +7,9 @@
 </head>
 
 <body>
-<h2>Chili</h2>
 <img src="Chili.jpg"> <br>
-Series: on-going, #1-26<br>
-Publisher: 1969 Marvel<br>
-Illustrated by Stan Goldberg<br>
+26 issues from 1969-1971 by Marvel<br>
+Illustrated by Stan Goldberg
 <p>
 Issue #1 <ul>
 <li>The Lady and the Lipstick! Chili is selected to be the new Lily Lovey lipstick girl, but she runs into a bit of a snag when she goes out to buy some Lily Lovey lipstick to wear to the interview. </li>
