--- a/Cindy/Cindy.html
+++ b/Cindy/Cindy.html
@@ -7,10 +7,8 @@
 </head>
 
 <body>
-<h2>Cindy Comics</h2>
 <img src="Cindy.jpg"> <br>
-Series: on-going, 20 issues<br>
-Publisher: 1947 Marvel<br>
+20 issues starting in 1947 by Marvel<br>
 <p>
 Can't find anything about this series. Probably part of the Molly series.
 </p>
