--- a/kb.html
+++ b/kb.html
@@ -11013,6 +11013,13 @@ Creative Knowledgebase<br>
 </tr>
 
 <tr>
+<td>Scott Pilgrim</td>
+<td>2010</td>
+<td>Universal</td>
+<td><a href="ScottPilgrim/ScottPilgrim.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Scribbly</td>
 <td>1948</td>
 <td>DC</td>
