--- a/ScottPilgrim/ScottPilgrim.html
+++ b/ScottPilgrim/ScottPilgrim.html
@@ -27,6 +27,7 @@ Created by Bryan Lee O'Malley
 <div class="mySlides" style="text-align: center;"><img src="ScottPilgrim04.jpg" title="Anna Kendrick and Michael Cera"></div>
 <div class="mySlides" style="text-align: center;"><img src="ScottPilgrim05.jpg" title="Mark Webber, Alison Pill, Mary Winstead, Ellen Wong, Johnny Simmons"></div>
 <div class="mySlides" style="text-align: center;"><img src="ScottPilgrim06.jpg" title="Chris Evans and Brie Larsen"></div>
+<div class="mySlides" style="text-align: center;"><img src="ScottPilgrim07.jpg" title="Aubrey Plaza"></div>
 <div class="mySlides" style="text-align: center;"><img src="ScottPilgrim10.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="ScottPilgrim11.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="ScottPilgrim12.jpg"></div>
