--- a/MasterOfKungFu/MasterOfKungFu.html
+++ b/MasterOfKungFu/MasterOfKungFu.html
@@ -2,15 +2,33 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
-<title>MasterOfKungFu </title>
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
+<title>Master Of Kung Fu </title>
 </head>
 
 <body>
 <img src="MasterOfKungFu17.jpg"> <br>
-Series: 109 issues (#17-125) 1974<br>
-Publisher: Marvel<br>
+109 issues (#17-125) 1974 by Marvel
 <p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="MasterOfKungFu17.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MasterOfKungFu17.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MasterOfKungFu17.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MasterOfKungFu17.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MasterOfKungFu17.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
 First issue #17, numbering continues from <a href="https://blzimg.github.io/SpecialMarvelEdition/SpecialMarvelEdition.html">Special Marvel Edition</a> #16.
 </p><p>
 The character Shang-Chi first appeared in Special Marvel Edition #15 (December 1973) by Steve Englehart and Jim Starlin. Shang-Chi appeared again in issue #16, and with issue #17 (April 1974) the title was changed to The Hands of Shang-Chi: Master of Kung Fu. Amidst the martial arts craze in the United States in the 1970s, the book became very popular, surviving until issue #125 (June 1983), a run including four giant-size issues and an annual.
