--- a/kb.html
+++ b/kb.html
@@ -8995,6 +8995,13 @@ Creative Knowledgebase<br>
 </tr>
 
 <tr>
+<td>Monster Hunters</td>
+<td>1993</td>
+<td>Charlton</td>
+<td><a href="MonsterHunters/MonsterHunters.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Monster Menace</td>
 <td>1993</td>
 <td>Marvel</td>
