--- a/MadameXanadu/MadameXanadu.html
+++ b/MadameXanadu/MadameXanadu.html
@@ -2,19 +2,42 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Madame Xanadu</title>
 </head>
 
 <body>
-Madame Xanadu<br>
-<img src="MadameXanadu.jpg"> <br>
-Series: 4 issues 2009-2011<br>
-Publisher: Vertigo (DC) <br>
-Written by Matt Wagner<br>
-Illustrations by Amy Reeder Hadley<br>
+<img src="MadameXanadu1.jpg" title="cover by Mike Kaluta"> <br>
+1 issue 1981, 29 issues 2008-2011, 4 issue TPM collections 2009-2011 by Vertigo (DC).
 <p>
-Nimue fails to persuade her sister Morgana from waging war on Camelot.
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="MadameXanadu1.jpg" title="cover by Mike Kaluta"></div>
+<div class="mySlides" style="text-align: center;"><img src="MadameXanadu01.jpg" title="cover by Amy Reeder Hadley"></div>
+<div class="mySlides" style="text-align: center;"><img src="MadameXanadu02.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MadameXanadu03.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MadameXanadu04.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
+Madame Xanadu premiered in <a href="../DoorwayToNightmare/DoorwayToNightmare.html">Doorway To Nightmare</a> number 1.
+</p><p>
+1981 issue features the stories "Tarot Readings", "Dance for Two Demons" and "Falling Down to Heaven."
+</p><p>
+2009 Series: Nimue fails to persuade her sister Morgana from waging war on Camelot.<br>
+<li>Volume 1 - Disenchanted collects Madame Xanadu (DC, 2008 series) #1-10
+<li>Volume 2 - Exodus Noir collects Madame Xanadu (DC, 2008 series) #11-15
+<li>Volume 3 - Broken House of Cards collects Madame Xanadu (DC, 2008 series) #16-23 and part of House of Mystery Halloween Annual (DC, 2009 series) #1
+<li>Volume 4 - Extra-Sensory collects Madame Xanadu (DC, 2008 series) #24-29.
 </p>
 </body>
 </html>
