--- a/MsMarvel/MsMarvel.html
+++ b/MsMarvel/MsMarvel.html
@@ -2,15 +2,39 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Ms. Marvel </title>
 </head>
 
 <body>
-<img src="MsMarvel.jpg"> <br>
-Series: 23 issues 1977-1978<br>
-Publisher: Marvel <br>
+<img src="MsMarvel01.jpg"> <br>
+23 issues 1977-1978 by Marvel
 <p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="MsMarvel01.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MsMarvel02.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MsMarvel03.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MsMarvel04.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MsMarvel05.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MsMarvel06.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MsMarvel07.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MsMarvel08.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MsMarvel09.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MsMarvel10.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+
+</p><p>
 Ms. Marvel is the name of several fictional superheroes appearing in comic books published by Marvel Comics. The character was originally conceived as a female counterpart to Captain Marvel. Like Captain Marvel, most of the bearers of the Ms. Marvel title gain their powers through Kree technology or genetics. Marvel has published four ongoing comic series titled Ms. Marvel, with the first two starring Carol Danvers, and the third and fourth starring Kamala Khan.
 </p><p>
 Carol Danvers, the first character to use the moniker Ms. Marvel, first appeared in Marvel Super-Heroes #13 (March 1968) by writer Roy Thomas and artist Gene Colan as a non-superpowered officer in the United States Air Force.
