--- a/CitizenVBattalion/CitizenVBattalion.html
+++ b/CitizenVBattalion/CitizenVBattalion.html
@@ -7,10 +7,8 @@
 </head>
 
 <body>
-<h2>Citizen V and the V Battalion</h2>
 <img src="CitizenVBattalion.jpg"> <br>
-Series: 3 issue mini series <br>
-Publisher: 2001 Marvel<br>
+3 issues 2001 Marvel<br>
 <p>
 Spinning from the pages of THUNDERBOLTS come Marvel's newest superstars!<br>
 Since World War II, they have remained in the shadows, fighting for world stability. They are the V-Battalion, descendants of the heroes of the Golden Age. Now, after decades of waging a hidden war, they have the opportunity to bring long-lasting peace to the planet, but it will require them usurp the plans of a master villain.
