--- a/CivilWarII/CivilWarII.html
+++ b/CivilWarII/CivilWarII.html
@@ -7,10 +7,8 @@
 </head>
 
 <body>
-<h2>Civil War II</h2>
 <img src="CivilWarII.jpg"> <br>
-Series: 9 issue mini series<br>
-Publisher: 2016 Marvel<br>
+9 issues 2016 Marvel<br>
 <p>
 Written by Brian Michael Bendis. Art and Cover by Olivier Coipel. From the creative team that brought you House of M and Siege comes a blistering first chapter in Marvel's new explosive event. Watch as the players are introduced and the table is set for a storyline that fans will be talking about for years.
 </p><p>
