--- a/Clandestine/Clandestine.html
+++ b/Clandestine/Clandestine.html
@@ -7,10 +7,8 @@
 </head>
 
 <body>
-<h2>Clandestine</h2>
 <img src="Clandestine.jpg"> <br>
-Series: on-going, 12 issues<br>
-Publisher: 1994 Marvel<br>
+12 issues 1994 Marvel<br>
 <p>
 Members of the Destine family are being hunted by monsters in search of the Gryphon in "Family Reunion Part 1: Apparently Unrelated Events". Part 1 of 4, continued next issue. Script and pencils by Alan Davis, inks by Mark Farmer. Modok, A.I.M., Silver Surfer cameos. Davis/Farmer cover. 
 </p><p>
