--- a/ClassicStarWars/ClassicStarWars.html
+++ b/ClassicStarWars/ClassicStarWars.html
@@ -7,10 +7,8 @@
 </head>
 
 <body>
-<h2>Classic Star Wars</h2>
 <img src="ClassicStarWars.jpg"> <br>
-Series: on-going, 20 issue reprints<br>
-Publisher: 1992 Dark Horse<br>
+20 issue reprints, 1992 Dark Horse<br>
 <p>
 This 20-issue series reprinted Archie Goodwin and Al Williamson's Star Wars newspaper strip circa 1981-1984. Williamson provided new covers for the series. The first installment finds bounty hunter Skorr kidnapping Luke and Leia on Ord Mantell. Han plays the hero and gets lots of good lines.
 </p>
