--- a/CliveBarkerBookDamned/CliveBarkerBookDamned.html
+++ b/CliveBarkerBookDamned/CliveBarkerBookDamned.html
@@ -7,10 +7,8 @@
 </head>
 
 <body>
-<h2>Clive Barker's Book of the Damned</h2>
 <img src="CliveBarkerBookDamned.jpg"> <br>
-Series: 4 issue mini series<br>
-Publisher: 1991 Epic (Marvel)<br>
+4 issues 1991 Epic (Marvel)<br>
 <p>
 A Hellraiser Companion. A notebook of research into the rumored existence of the Cenobites, as one man is inexorably pulled into Hell's tangled web. Take a look into the secret journal of Philip LeMarchand, the mad genius architect of those hellish puzzle boxes!
 </p><p>
