--- a/CliveBarkerHarrowers/CliveBarkerHarrowers.html
+++ b/CliveBarkerHarrowers/CliveBarkerHarrowers.html
@@ -7,10 +7,8 @@
 </head>
 
 <body>
-<h2>Clive Barker's The Harrowers</h2>
 <img src="CliveBarkerHarrowers.jpg"> <br>
-Series: 6 issue mini series Adaptation<br>
-Publisher: 1993 Marvel<br>
+6 issues 1993 Marvel<br>
 <p>
 Series featured glow in the dark covers.
 </p><p>
