--- a/CliveBarkerNightbreed/CliveBarkerNightbreed.html
+++ b/CliveBarkerNightbreed/CliveBarkerNightbreed.html
@@ -7,10 +7,8 @@
 </head>
 
 <body>
-<h2>Clive Barker's Nightbreed</h2>
 <img src="CliveBarkerNightbreed.jpg"> <br>
-Series: Graphic Novel<br>
-Publisher: 1991 Epic (Marvel)<br>
+1 issue 1991 Epic (Marvel)<br>
 <p>
 Based on the story by Clive Barker. Adapted by Alan Grant and John Wagner. Art by Jim Baikie. Cover by Mike Mignola. A world of horrors beyond human ken, where the lost tribes of man are gathered, from the bizarre to the berzerker: Welcome to Midian, a world which the man who was Aaron Boone is destined to bring both destruction, and salvation. Welcome to the world of the NIGHTBREED.
 </p>
