--- a/CloakDagger/CloakDagger.html
+++ b/CloakDagger/CloakDagger.html
@@ -2,19 +2,35 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Cloak and Dagger</title>
 </head>
 
 <body>
-<h2>Cloak and Dagger</h2>
-<img src="CloakDagger.jpg">
-<img src="CloakDagger1985.jpg"> <br>
-<img src="CloakDagger1988.jpg"> 
-<img src="CloakDagger2010.jpg"> <br>
-Series: 4 issue mini-series, on-going<br>
-Publisher: 1983 Marvel<br>
+<img src="CloakDagger1.jpg"><br>
+4 issues 1983, 11 issues 1985-1987, 19 issues 1988-1991, 1 issue in 2010 by Marvel<br>
 <p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="CloakDagger1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="CloakDagger2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="CloakDagger3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="CloakDagger4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="CloakDagger1985.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="CloakDagger1988.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="CloakDagger2010.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
 1983 #1: "The Priest!" Written by Art and cover by Rick Leonardi and Terry Austin. Before the Runaways, there was Cloak and Dagger. The heroes of Dark and Light seek sanctuary with Father Delgado. But forces from without seek to tear them apart. NOTE: Ed Hannigan is credited as co-creator. The whole issue was sketched by Hannigan and these sketches were reprinted in Marvel Age.
 </p><p>
 1985 #1: Cover pencils by Rick Leonardi, inks by Terry Austin. Sinners All!, script by Bill Mantlo, pencils by Rick Leonardi, inks by Terry Austin; Cloak and Dagger take down a porno shop employing slave labor; Dagger decides to visit her birth mother after getting the information from Father Delgado; origin retold.
