--- a/CodeOfHonor/CodeOfHonor.html
+++ b/CodeOfHonor/CodeOfHonor.html
@@ -7,13 +7,10 @@
 </head>
 
 <body>
-<h2>Code Of Honor</h2>
-<img src="CodeOfHonor.jpg"> <br>
-Series: 4 issue mini series<br>
-Publisher: 1997 Marvel<br>
+<img src="CodeOfHonor.jpg" title="Cover by Brad Parker"> <br>
+4 issues 1997 Marvel<br>
 <p>
-Painted cover art by Brad Parker. Code Of Honor Part 1: Guns, script by Chuck Dixon, painted art by Brad Parker and Tristan Shane.<br>
-An African American rookie cop learns what it's like when you share the streets with super heroes. Jeff proposes to his lady love. Jeff picks up a thousand dollar bill dropped by the Kingpin.
+Code Of Honor Part 1: Guns. An African American rookie cop learns what it's like when you share the streets with super heroes. Jeff proposes to his lady love. Jeff picks up a thousand dollar bill dropped by the Kingpin.
 </p>
 
 </body>
