--- a/CoffinHill/CoffinHill.html
+++ b/CoffinHill/CoffinHill.html
@@ -7,10 +7,8 @@
 </head>
 
 <body>
-<h2>Coffin Hill</h2>
 <img src="CoffinHill.jpg"> <br>
-Series: on-going, 20 issues.<br>
-Publisher: 2013 Vertigo<br>
+20 issues 2013 Vertigo<br>
 <p>
 Cover by Dave Johnson, written by Caitlin Kittredge, art by Inaki Miranda.<br>
 COFFIN HILL stars Eve Coffin, a rebellious, teenage lowlife from a high-society family with a curse that goes back to the Salem Witch trials. Following a night of sex, drugs and witchcraft in the woods, Eve wakes up naked, covered in blood and unable to remember how she got there. One friend is missing, one is in a mental ward, and one knows that Eve is responsible. 
