--- a/CliveBarkerHellraiser/CliveBarkerHellraiser.html
+++ b/CliveBarkerHellraiser/CliveBarkerHellraiser.html
@@ -7,10 +7,8 @@
 </head>
 
 <body>
-<h2>Clive Barker's Hellraiser</h2>
 <img src="CliveBarkerHellraiser.jpg"> <br>
-Series: on-going, 20 issues, 1 collection<br>
-Publisher: 1989 Epic (Marvel)<br>
+20 issues, 1 collection TPB 1989 Epic (Marvel)<br>
 <p>
 Tales by Erik Saltzaber, Sholly Fisch, Jan Strnad, Ted McKeever, John Bolton, Dan Spiegle, Berni Wrightson, and more! Collected here for the first time are some of Clive Barker's favorite tales from the chilling horror series based on his mythology, a compendium of hellish tales of terror the movies don't dare unleash. 
 </p>
