--- a/Colder/Colder.html
+++ b/Colder/Colder.html
@@ -2,18 +2,31 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Colder</title>
 </head>
 
 <body>
-<h2>Colder</h2>
-<img src="Colder.jpg">
-<img src="ColderBadSeed.jpg">
-<img src="ColderTossTheBones.jpg"> <br>
-Series: 5 issue mini series (three times!)<br>
-Publisher: 2012, 2014, 2015 Dark Horse<br>
+<img src="Colder.jpg"> <br>
+5 issues 2012, 2014, 2015 by Dark Horse<br>
 <p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="Colder.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ColderBadSeed.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ColderTossTheBones.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
 2012 Colder #1: Written by Paul Tobin, Illustrations by Juan Ferreyra.<br>
 Declan Thomas's body temperature is dropping. He never gets sick, never feels pain. An ex-inmate of an insane asylum that was destroyed in a fire, he has the strange ability to step inside a person's madness and sometimes cure it. He hopes to one day cure his own, but time is running out, because when his temperature reaches zero . . . it's over. 
 </p><p>
