--- a/BarbWire/BarbWire.html
+++ b/BarbWire/BarbWire.html
@@ -2,22 +2,40 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Barb Wire</title>
 </head>
 
 <body>
-<img src="BarbWire1994.jpg"> 
-<img src="BarbWireMovie.jpg"> 
-<img src="BarbWire2015.jpg"> <br>
-Series: 1994, Movie 1996 <br>
-Publisher: Dark Horse<br>
+<img src="BarbWire1994.jpg"><br>
+9 issues 1994-1995 by Dark Horse, Movie 1996 by PolyGram<br>
 <p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="BarbWire1994.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BarbWireMovie.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BarbWire2015.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BarbWireMovie2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BarbWireMovie3.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
 1994 Issue #1: "Devil in the Dark" with guest appearances by The Machine, Hurricane Max, Motorhead, and Deathcard.
 </p><p>
 1996 Movie by Gramercy Pictures, starring Pamela Anderson. Barb Wire is set in 2017 during the "Second American Civil War". Barb Wire owns the Hammerhead, a nightclub in Steel Harbor, "the last free city" in a United States ravaged by the civil war, and she brings in extra cash working as a mercenary and bounty hunter.
 </p><p>
 2015 Issue #1: Nail-hard tough and drop-dead gorgeous, Barb Wire is the baddest bounty hunter on the mean streets of Steel Harbor, where gangsters can lift bulldozers and leap rusting factories in a single bound. The hunting is stupid good and the bounties are hella big, if Barb lives long enough to collect!
+</p><p>
+Barb Wire also features in <a href="../ComicsGreatestWorld/ComicsGreatestWorld.html">Comics Greatest World</a>
 </p>
 </body>
 </html>
