--- a/CombatKelly/CombatKelly.html
+++ b/CombatKelly/CombatKelly.html
@@ -7,10 +7,8 @@
 </head>
 
 <body>
-<h2>Combat Kelly</h2>
 <img src="CombatKelly.jpg"> <br>
-Series: on-going, 44 issues<br>
-Publisher: 1951 Atlas (Marvel)<br>
+44 issues 1951 Atlas (Marvel)
 <p>
 Korean war series.
 </p>
