--- a/ComedyComics/ComedyComics.html
+++ b/ComedyComics/ComedyComics.html
@@ -7,10 +7,8 @@
 </head>
 
 <body>
-<h2>Comedy Comics</h2>
 <img src="ComedyComics009.jpg"> <br>
-Publisher: Timely, Atlas, Marvel<br>
-Series: 26 issues #9 - 34, from 1942 to 1946.
+26 issues 1942-1946 by Timely, Atlas, Marvel
 <p>
 Numbering continues from Daring Mystery Comics (Marvel, 1940 series) #8. Changed from a superhero series to a comedy / funny animal series. Several superhero features continued into the first few issues under the new name and genre. Numbering continues with Margie Comics (Marvel, 1946 series) #35.
 </p><p>
