--- a/CometMan/CometMan.html
+++ b/CometMan/CometMan.html
@@ -7,12 +7,9 @@
 </head>
 
 <body>
-<h2>Comet Man</h2>
 <img src="CometMan01.jpg"> <br>
-Illustrator: Bill Sienkiewicz<br>
-Writers: Bill Mumy, Miguel Ferrer<br>
-Series: 6 issue mini-series<br>
-Publisher: 1987 Marvel <br>
+Illustrator: Bill Sienkiewicz, Writers: Bill Mumy, Miguel Ferrer<br>
+6 issues in 1987 by Marvel
 <p>
 Comet Man first appeared in Comet Man #1 (February 1987), and appeared in the rest of the series from Comet Man #2-6 (March–July 1987). The character subsequently appears in Fantastic Four #315-317 (June–August 1988), Marvel Comics Presents #50-53 (May–July 1990), and Captain Marvel vol. 5 #7 (July 2000).
 </p><p>
