--- a/ComicsGreatestWorld/ComicsGreatestWorld.html
+++ b/ComicsGreatestWorld/ComicsGreatestWorld.html
@@ -7,12 +7,10 @@
 </head>
 
 <body>
-<h2>Comics' Greatest World: Barb Wire</h2>
 <img src="ComicsGreatestWorld1.jpg"> <br>
-Series: one-off<br>
-Publisher: 1993 Dark Horse<br>
+1 issue 1993 by Dark Horse<br>
 <p>
-
+Featuring <a href="../BarbWire/BarbWire.html">Barb Wire</a>
 </p>
 
 </body>
