--- a/CombatCasey/CombatCasey.html
+++ b/CombatCasey/CombatCasey.html
@@ -7,10 +7,8 @@
 </head>
 
 <body>
-<h2>Combat Casey</h2>
 <img src="CombatCasey.jpg"> <br>
-Series: on-going, 29 issues<br>
-Publisher: 1952 Atlas (Marvel)<br>
+29 issues 1952 Atlas (Marvel)
 <p>
 Series begins at #6, continuing numbering from "War Combat" #5. A collection of short WWII stories.
 </p><p>
